Added Data Attachment to store data for PO101.java item.

--- a/src/main/resources/assets/smartcraft/lang/en_us.json
+++ b/src/main/resources/assets/smartcraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.smartcraft.example": "Hunted by Bounty",
   "item.smartcraft.swift_blind": "Swift Blind",
   "item.smartcraft.base_copper_plate": "Base Copper Plate",
   "item.smartcraft.etched_copper_plate": "Etched Copper Plate",
